# BioGestor

./: .env.example  .gitignore  AGENTS.md  README.md  iniciar_biogestor.bat  pyproject.toml
docs/spec/: 01_vision.md  02_modules_menu.md  03_audit_log.md  04_produccion_goma_seca_ui.md  05_stock_disolventes.md
migrations/: README.md
src/biogestor/: __init__.py  app.py  main.py
src/biogestor/auth/: bootstrap_user.py  roles.py
src/biogestor/config/: settings.py
src/biogestor/core/: __init__.py  logging_config.py  security.py
src/biogestor/db/: init_db.py  session.py
src/biogestor/db/models/: __init__.py  audit_log.py  bidon.py  goma_seca_production.py  solvent_week_metric.py  user.py
src/biogestor/modules/: module_registry.py
src/biogestor/modules/consultas/: __init__.py  consultas_widget.py
src/biogestor/modules/envios/: __init__.py  pending_shipments_widget.py
src/biogestor/modules/horas_trabajadas/: __init__.py
src/biogestor/modules/producciones/: __init__.py  goma_seca_widget.py
src/biogestor/modules/recepciones/: __init__.py
src/biogestor/repositories/: bidon_repository.py  goma_seca_repository.py  solvent_week_metric_repository.py  user_repository.py
src/biogestor/services/: audit_service.py  auth_service.py  bidon_service.py  goma_seca_service.py  pending_shipments_service.py  solvent_week_metric_service.py
src/biogestor/ui/: initial_setup_dialog.py  login_dialog.py  main_window.py
tests/: test_auth_service.py  test_data_entry_services.py  test_security.py  test_settings.py  test_smoke_imports.py  test_ui_navigation.py
(+3 files in other folders)
